tests/errors/modulo_by_zero.vhpt
--TEST--
Modulo by zero error
--FILE--
<?php
echo 10 % 0;
--EXPECT_ERROR--
Division by zero
